--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
+<title>
+
+    Bienvenido
+
+</title>
 
 <body>
 
     <h2 style="color: crimson">
 
         Bienvenidos al curso
+
     </h2>
 
     <p>
@@ -15,6 +21,7 @@
             Mi nombres es {{mi_nombre}} tengo {{mi_edad}} años y soy {{mi_rol}}
 
         </h3>
+
     </p>
 
     <p>
@@ -33,4 +40,6 @@
     </p>
 
 </body>
+
+<p>Propiedad y diseño de CAFRADA</p>
 </html>
