--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ p{
 
 </body>
 
-<a href="Segunda.html">CLICK AQUI</a>
+<a href="Images/Segunda.html">CLICK AQUI</a>
 
 
 <p>Propiedad y diseño de CAFRADA</p>
