Colocacion de barra de navegacion, banner y seccion noticias

--- a/index.html
+++ b/index.html
@@ -1,73 +1,83 @@
-<html>
+
 <meta charset="UTF-8"/>
 
+<head>
+
 <title>
-
     Bienvenido
-
 </title>
 
+<link rel="stylesheet" href="css/estilo.css">
 
-<link href="css/estilo.css" rel="stylesheet">
+</head>
+<header>
 
-<style type="text/css">
+    <section id="banner"></section>
 
-body{
-    margin: 0;
-    height: auto;
-    width: auto;
-    background-color: #264e8a;
-    }
-p{
-    background-color: #264e8a;
-    margin: 0;
-    color: white;
-    height: auto;
-    text-align: center;
-}
-#superior{
-    background-image: url("Images/Fondo.jpg");
-    background-repeat: repeat-x;
-    text-align: center;
-    height: 295px;
-    width: auto;
-
-}
-
-#banner{
-
-    background-image: url("Images/Degradado.jpg");
-    color: white;
-    text-align: center;
-    background-color: #264e8a;
-    height: 600px;
-    width: auto;
-    background-repeat: repeat-x;
-    margin: 0;
-
-}
-
-</style>
+</header>
 
 <body>
 
-<div id="superior">
+<nav id="principal">
+    <ul class="barra_nav">
 
-</div>
+        <li><a>Inicio</a>
+            <ul>
+                <li><a href="">Cronograma</a></li>
+                <li><a href="">Horarios</a></li>
+                <li><a href="">Tutores</a></li>
+                <li><a href="">Novedades</a></li>
+            </ul>
+        </li>
 
-<div id="banner">
+        <li><a>Material</a>
+            <ul>
+                <li><a href="">Presentaciones clases</a></li>
+                <li><a href="">Apunte teorico</a></li>
+                <li><a href="">Guia de ejercicios</a></li>
+                <li><a href="">Examenes</a></li>
+            </ul>
+        </li>
 
+        <li><a>Descargas</a>
+            <ul>
+                <li><a href="">Presentaciones clases</a></li>
+                <li><a href="">Apunte teorico</a></li>
+                <li><a href="">Guia de ejercicios</a></li>
+                <li><a href="">Examenes</a></li>
+            </ul>
+        </li>
 
+        <li><a>Acerca de </a>
+            <ul>
+                <li><a href="#nombre">Quienes somos</a></li>
+                <li><a href="">Contacto</a></li>
+            </ul>
+        </li>
 
-</div>
+    </ul>
+</nav>
 
+<section id="seccion_centro">
 
-</body>
+    <h1>Noticias</h1>
+    <ul>
+        <li><a href=""><h2>Primera noticia: </a><span>bla bla bla ahlfanssdnalv lsnkclaskndoas kbdlasmc laskndlcan</span></header></li>
+        <li><a href=""><h2>Segunda noticia: <span>bla bla bla</span></h2></a></li>
+        <li><a href=""><h2>Tercera noticia: <span>bla bla bla</span></h2></a></li>
+        <li><a href=""><h2>Cuarta noticia: <span>bla bla bla</span></h2></a></li>
+    </ul>
+
+</section>
 
 <a href="Segunda.html">CLICK AQUI</a>
 
+<a href="Grafico_Covid_19.ods">CLICK AQUI</a
 
-<p>Propiedad y diseño de CAFRADA</p>
-
+</body>
+<p>
+<h3>Propiedad y diseño de <span id="nombre">cafrada</span></h3>
+</p>
+</div>
 </html>
 
